<resources>
    <string-array name="percentage_list">
        <item>25</item>
        <item>35</item>
        <item>50</item>
        <item>60</item>
        <item>75</item>
        <item>85</item>
        <item>95</item>
    </string-array>
    <string name="version">Version: 1.7-beta-01</string>
    <string name="app_name">ITERio</string>
    <string name="toolbar_title">ITERio</string>
    <string name="user_id">Regd ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Percent_25">25 %</string>
    <string name="Percent_35">35 %</string>
    <string name="Percent_50">50 %</string>
    <string name="Percent_60">60 %</string>
    <string name="Percent_75">75 %</string>
    <string name="Percent_85">85 %</string>
    <string name="Percent_95">95 %</string>
    <string name="credit_text">It\'s an UNOFFICIAL attendance app for ITER. Attendance data shown here are directly fetched from ITER server. Accuracy of attendance depends on server.
        USER DISCRETION IS ADVISED.</string>
    <string name="developed_by_sekhar">Developed by : P. Sekhar</string>
    <string name="about">About</string>
    <string name="need">Need "</string>
    <string name="bunk">Bunk "</string>
    <string name="updated_date">Updated :</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="credits">Credits</string>
    <string name="logout">Logout</string>
    <string name="set_theme">Set Theme</string>
    <string name="set_attendance">Min Percentage</string>
    <string name="name">Name</string>
    <string name="refresh">refresh</string>
    <string name="_100">100</string>
    <string name="_60">60</string>
    <string name="percentage_sign">%</string>
    <string name="subject_type">Subject Type</string>
    <string name="classes_attended">Classes Attended</string>
    <string name="subject">Subject</string>
    <string name="classes_need_to_attend1">Classes need to attend1</string>
    <string name="classes_need_to_attend2">Classes need to attend2</string>
    <string name="classes_need_to_bunk1">Classes need to bunk1</string>
    <string name="classes_need_to_bunk2">Classes need to bunk2</string>
    <string name="classes_need_to_bunk3">Classes need to bunk3</string>
    <string name="time_updated">time_updated</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_data_available">Attendance not available in server</string>
    <string name="check_again_later">Check again later</string>
    <string name="minAttendanceTitle">Set Percentage</string>
    <string name="noInternet">No internet Connection</string>
    <string name="FAQ">FAQ</string>
    <string-array name="faq_questions">
        <item>Q. What is Iterio App?</item>
        <item>Q. Why its showing ITER server down?</item>
        <item>Q. Why first time login taking so much time?</item>
        <item>Q. Why its showing attendance not available in server?</item>
        <item>Q. Can I see my result in this app ?</item>
        <item>Q. Is this app Open source ?</item>
        <item>Q. Do you have dark mode ?</item>
        <item>Q. Does multiple login available ?</item>
    </string-array>
    <string-array name="faq_answers">
        <item>It is an unofficial attendance tracking app for ITER students.</item>
        <item>Because the server where login happens is down. You can login again when servers are online.</item>
        <item>Due to the dynamic nature of ITER server IP address, it’s scraped from SOA website directly. But it only happens once.</item>
        <item>Because your latest semester attendance might not be uploaded to the server yet.</item>
        <item>No.</item>
        <item>No. But it will be.</item>
        <item>Yes.</item>
        <item>No.</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playstore_rating">Rate</string>
    <string name="share">Share</string>
    <string name="can_not_share">U have no app to share</string>
</resources>