<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:text="@string/about"
        android:gravity="center"
        android:layout_marginTop="30dp"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_round_developer_mode_24"
        android:layout_width="80dp"
        android:layout_height="80dp"/>
    <TextView
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textAllCaps="true"
        style="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/credit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:text="@string/version"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/developed_by_sekhar"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>